Updated orders case statement for fixed amount discounts (#78)
* Updated orders case statement, seed files, tmp packages.yml

* updateBuildkite schema

* GITIGNORE and packages update

* DS_Store removal

--- a/integration_tests/dbt_project.yml
+++ b/integration_tests/dbt_project.yml
@@ -1,5 +1,5 @@
 name: 'shopify_integration_tests'
-version: '0.11.0'
+version: '0.12.0'
 profile: 'integration_tests'
 config-version: 2
 
@@ -10,7 +10,7 @@ clean-targets:         # directories to be removed by `dbt clean`
 
 vars:
   shopify_using_fulfillment_event: true
-  shopify_schema: shopify_integration_tests_6
+  shopify_schema: shopify_integration_tests_7
   shopify_source:
     shopify_customer_identifier:          "shopify_customer_data"
     shopify_order_line_refund_identifier: "shopify_order_line_refund_data"
@@ -139,6 +139,7 @@ seeds:
         usage_count: float
     shopify_order_discount_code_data:
       +column_types:
+        order_id: "{%- if target.type == 'bigquery' -%} INT64 {%- else -%} bigint {%- endif -%}"
         amount: float
     shopify_order_shipping_tax_line_data:
       +column_types:
