--- a/integration_tests/dbt_project.yml
+++ b/integration_tests/dbt_project.yml
@@ -1,5 +1,5 @@
 name: 'shopify_integration_tests'
-version: '0.12.0'
+version: '0.12.1'
 profile: 'integration_tests'
 config-version: 2
 
@@ -55,6 +55,7 @@ dispatch:
 models:
   shopify:
     +schema: "{{ 'shopify_integrations_tests_sqlw' if target.name == 'databricks-sql' else 'shopify' }}"
+  # +schema: "shopify_{{ var('directed_schema','dev') }}"
 
 seeds:
   shopify_integration_tests:
