integrity test update

--- a/integration_tests/dbt_project.yml
+++ b/integration_tests/dbt_project.yml
@@ -53,9 +53,9 @@ dispatch:
     search_order: ['spark_utils', 'dbt_utils']
 
 models:
-  shopify:
-    +schema: "{{ 'shopify_integrations_tests_sqlw' if target.name == 'databricks-sql' else 'shopify' }}"
-  # +schema: "shopify_{{ var('directed_schema','dev') }}"
+  # shopify:
+    # +schema: "{{ 'shopify_integrations_tests_sqlw' if target.name == 'databricks-sql' else 'shopify' }}"
+  +schema: "shopify_{{ var('directed_schema','dev') }}"
 
 seeds:
   shopify_integration_tests:
