--- a/integration_tests/dbt_project.yml
+++ b/integration_tests/dbt_project.yml
@@ -1,5 +1,5 @@
 name: 'shopify_integration_tests'
-version: '0.13.0'
+version: '0.13.1'
 profile: 'integration_tests'
 config-version: 2
 
@@ -9,9 +9,9 @@ clean-targets:         # directories to be removed by `dbt clean`
   - "dbt_modules"
 
 vars:
-  # shopify_using_fulfillment_event: true # set to true when regenerating docs
-  # shopify_using_all_metafields: true # set to true when regenerating docs
-  shopify_schema: shopify_integration_tests_10
+  shopify_using_fulfillment_event: true # set to true when regenerating docs
+  shopify_using_all_metafields: true # set to true when regenerating docs
+  shopify_schema: shopify_integration_tests_11
   shopify_source:
     shopify_customer_identifier: "shopify_customer_data"
     shopify_order_line_refund_identifier: "shopify_order_line_refund_data"
