MagicBot/documentation-updates

--- a/.quickstart/quickstart.yml
+++ b/.quickstart/quickstart.yml
@@ -12,3 +12,17 @@ destination_configurations:
     dispatch:
       - macro_namespace: dbt_utils
         search_order: [ 'spark_utils', 'dbt_utils' ]
+
+public_models: [
+  "shopify__customer_email_cohorts",
+  "shopify__customer_cohorts",
+  "shopify__discounts",
+  "shopify__customer_emails",
+  "shopify__inventory_levels",
+  "shopify__orders",
+  "shopify__daily_shop",
+  "shopify__products",
+  "shopify__transactions",
+  "shopify__customers",
+  "shopify__order_lines"
+]
