revisions and regen docs

--- a/.quickstart/quickstart.yml
+++ b/.quickstart/quickstart.yml
@@ -24,6 +24,5 @@ public_models: [
   "shopify__products",
   "shopify__transactions",
   "shopify__customers",
-  "shopify__order_lines",
-  "shopify__line_item_enhanced"
+  "shopify__order_lines"
 ]
