--- a/integration_tests/dbt_project.yml
+++ b/integration_tests/dbt_project.yml
@@ -1,5 +1,5 @@
 name: 'shopify_integration_tests'
-version: '0.13.1'
+version: '0.13.2'
 profile: 'integration_tests'
 config-version: 2
 
@@ -12,6 +12,7 @@ vars:
   ## Uncomment when regenerating docs
   # shopify_using_fulfillment_event: true
   # shopify_using_all_metafields: true
+  # shopify__standardized_billing_model_enabled: true
 
   shopify_schema: shopify_integration_tests_11
   shopify_source:
