--- a/integration_tests/dbt_project.yml
+++ b/integration_tests/dbt_project.yml
@@ -1,5 +1,5 @@
 name: 'shopify_integration_tests'
-version: '0.13.2'
+version: '0.14.0'
 profile: 'integration_tests'
 config-version: 2
 
@@ -10,13 +10,13 @@ clean-targets:         # directories to be removed by `dbt clean`
 
 vars:
   ## Uncomment when regenerating docs
-  # shopify_using_fulfillment_event: true
-  # shopify_using_all_metafields: true
-  # shopify__standardized_billing_model_enabled: true
+  shopify_using_fulfillment_event: true
+  shopify_using_all_metafields: true
+  shopify__standardized_billing_model_enabled: true
+  shopify_using_abandoned_checkout: true
 
-  shopify_schema: shopify_integration_tests_11
   shopify_source:
-    shopify_customer_identifier: "shopify_customer_data"
+    shopify_customer_identifier: "shopify_customer_data_empty"
     shopify_order_line_refund_identifier: "shopify_order_line_refund_data"
     shopify_order_line_identifier: "shopify_order_line_data"
     shopify_order_identifier: "shopify_order_data"
@@ -25,11 +25,11 @@ vars:
     shopify_product_variant_identifier: "shopify_product_variant_data"
     shopify_refund_identifier: "shopify_refund_data"
     shopify_transaction_identifier: "shopify_transaction_data"
-    shopify_abandoned_checkout_identifier: "shopify_abandoned_checkout_data"
+    shopify_abandoned_checkout_identifier: "shopify_abandoned_checkout_data_empty"
     shopify_collection_product_identifier: "shopify_collection_product_data"
     shopify_collection_identifier: "shopify_collection_data"
     shopify_customer_tag_identifier: "shopify_customer_tag_data"
-    shopify_discount_code_identifier: "shopify_discount_code_data"
+    shopify_discount_code_identifier: "shopify_discount_code_data_empty"
     shopify_fulfillment_identifier: "shopify_fulfillment_data"
     shopify_fulfillment_event_identifier: "shopify_fulfillment_event_data"
     shopify_inventory_item_identifier: "shopify_inventory_item_data"
@@ -41,23 +41,27 @@ vars:
     shopify_order_shipping_tax_line_identifier: "shopify_order_shipping_tax_line_data"
     shopify_order_tag_identifier: "shopify_order_tag_data"
     shopify_order_url_tag_identifier: "shopify_order_url_tag_data"
-    shopify_price_rule_identifier: "shopify_price_rule_data"
+    shopify_price_rule_identifier: "shopify_price_rule_data_empty"
     shopify_product_image_identifier: "shopify_product_image_data"
     shopify_product_tag_identifier: "shopify_product_tag_data"
     shopify_shop_identifier: "shopify_shop_data"
     shopify_tax_line_identifier: "shopify_tax_line_data"
     shopify_tender_transaction_identifier: "shopify_tender_transaction_data"
-    shopify_abandoned_checkout_discount_code_identifier: "shopify_abandoned_checkout_discount_code_data"
+    shopify_abandoned_checkout_discount_code_identifier: "shopify_abandoned_checkout_discount_code_data_empty"
     shopify_order_discount_code_identifier: "shopify_order_discount_code_data"
-    shopify_abandoned_checkout_shipping_line_identifier: "shopify_abandoned_checkout_shipping_line_data"
+    shopify_abandoned_checkout_shipping_line_identifier: "shopify_abandoned_checkout_shipping_line_data_empty"
 
 dispatch:
   - macro_namespace: dbt_utils
     search_order: ['spark_utils', 'dbt_utils']
 
 models:
-  +schema: "{{ 'shopify_integrations_tests_sqlw' if target.name == 'databricks-sql' else 'shopify' }}"
+  +schema: "{{ 'shopify_integrations_tests_sqlw' if target.name == 'databricks-sql' else 'shopify_customers_dev' }}"
   # +schema: "shopify_{{ var('directed_schema','dev') }}"
+  # +materialized: table
+  # shopify_source:
+  #   tmp:
+  #     +materialized: view
 
 seeds:
   shopify_integration_tests:
