--- a/packages.yml
+++ b/packages.yml
@@ -1,3 +1,7 @@
 packages:
-- package: fivetran/shopify_source
-  version: [">=0.12.0", "<0.13.0"]
+# - package: fivetran/shopify_source
+#   version: [">=0.13.0", "<0.14.0"]
+
+  - git: https://github.com/fivetran/dbt_shopify_source.git
+    revision: bugfix/redshift_constant_expressions
+    warn-unpinned: false
