--- a/integration_tests/dbt_project.yml
+++ b/integration_tests/dbt_project.yml
@@ -14,6 +14,7 @@ vars:
   shopify_using_all_metafields: true
   shopify__standardized_billing_model_enabled: true
   shopify_using_abandoned_checkout: true
+  shopify_schema: shopify_integration_tests_11
 
   shopify_source:
     shopify_customer_identifier: "shopify_customer_data_empty"
@@ -58,10 +59,6 @@ dispatch:
 models:
   +schema: "{{ 'shopify_integrations_tests_sqlw' if target.name == 'databricks-sql' else 'shopify_customers_dev' }}"
   # +schema: "shopify_{{ var('directed_schema','dev') }}"
-  # +materialized: table
-  # shopify_source:
-  #   tmp:
-  #     +materialized: view
 
 seeds:
   shopify_integration_tests:
