--- a/integration_tests/dbt_project.yml
+++ b/integration_tests/dbt_project.yml
@@ -10,10 +10,9 @@ clean-targets:         # directories to be removed by `dbt clean`
 
 vars:
   ## Uncomment when regenerating docs
-  shopify_using_fulfillment_event: true
-  shopify_using_all_metafields: true
-  shopify__standardized_billing_model_enabled: true
-  shopify_using_abandoned_checkout: true
+  # shopify_using_fulfillment_event: true
+  # shopify_using_all_metafields: true
+  # shopify__standardized_billing_model_enabled: true
   shopify_schema: shopify_integration_tests_11
 
   shopify_source:
@@ -57,7 +56,7 @@ dispatch:
     search_order: ['spark_utils', 'dbt_utils']
 
 models:
-  +schema: "{{ 'shopify_integrations_tests_sqlw' if target.name == 'databricks-sql' else 'shopify_customers_dev' }}"
+  +schema: "{{ 'shopify_integrations_tests_sqlw' if target.name == 'databricks-sql' else 'shopify' }}"
   # +schema: "shopify_{{ var('directed_schema','dev') }}"
 
 seeds:
