--- a/.quickstart/quickstart.yml
+++ b/.quickstart/quickstart.yml
@@ -4,6 +4,8 @@ schema_key: shopify_schema
 dbt_versions: ">=1.3.0 <2.0.0"
 
 table_variables:
+  shopify_using_metafield:
+    - metafield
   shopify_using_fulfillment_event:
     - fulfillment_event
   shopify_using_abandoned_checkout:
