Bugfix/redshift constant expressions (#92)
* add abandoned_checkout config, update docs and versions

* eventually change the deps

* update docs, schema, script

* updates

* fix seed data identifier

* add metadata config and update readme

* update changelog

* docs  and revert project configs

* changelog

* update run script

* new schema

* small update to readme align

* update readme

* updates

* Update CHANGELOG.md

Co-authored-by: Joe Markiewicz <74217849+fivetran-joemarkiewicz@users.noreply.github.com>

* format updates

* update

* package ref

---------

Co-authored-by: Joe Markiewicz <74217849+fivetran-joemarkiewicz@users.noreply.github.com>
Co-authored-by: Jamie Rodriguez <65564846+fivetran-jamie@users.noreply.github.com>

--- a/.quickstart/quickstart.yml
+++ b/.quickstart/quickstart.yml
@@ -4,8 +4,14 @@ schema_key: shopify_schema
 dbt_versions: ">=1.3.0 <2.0.0"
 
 table_variables:
+  shopify_using_metafield:
+    - metafield
   shopify_using_fulfillment_event:
     - fulfillment_event
+  shopify_using_abandoned_checkout:
+    - abandoned_checkout
+    - abandoned_checkout_discount_code
+    - abandoned_checkout_shipping_line
 
 destination_configurations:
   databricks:
