--- a/packages.yml
+++ b/packages.yml
@@ -1,6 +1,3 @@
 packages:
-# - package: fivetran/shopify_source
-#   version: [">=0.14.0", "<0.15.0"]
-  - git: https://github.com/fivetran/dbt_shopify_source.git
-    revision: feature/product-inventory-api-update
-    warn-unpinned: false 
+- package: fivetran/shopify_source
+  version: [">=0.14.0", "<0.15.0"]
